@@ -1,3 +1,7 @@
+2000-03-22  Daniel Berlin   <dan@cgsoftware.com>
+
+       * gdb.base/help.exp: Added test for new apropos command.
+
 2000-03-21  Kevin Buettner <kevinb@redhat.com>
 
 	* gdb.base/pointers.c (usevar): New function.
